--- a/cryptx/home/templates/home/login.html
+++ b/cryptx/home/templates/home/login.html
@@ -2,18 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="{% static 'home/signup.css' %}">
-  <title>Document</title>
+    <title>Log In</title>
 </head>
 <body>
-	<div class="container-fluid ps-md-0">
+    <div class="container-fluid ps-md-0">
 		<div class="row g-0">
 		  <div class="d-none d-md-flex col-md-4 col-lg-6 bg-image"></div>
 		  <div class="col-md-8 col-lg-6">
@@ -24,28 +23,15 @@
 					<h3 class="login-heading mb-4">Welcome!</h3>
 	  
 					<!-- Sign In Form -->
-					<form action="/signuph/" method="POST">{% csrf_token %}
+					<form action="/login/" method="POST">{% csrf_token %}
 					  <div class="form-floating mb-3">
-						<input type="text" name="fname" class="form-control" id="floatingInput" placeholder="name@example.com">
-						<label for="floatingInput">First Name</label>
-					  </div>
-					  <div class="form-floating mb-3">
-						<input type="text" name="lname" class="form-control" id="floatingPassword" placeholder="Password">
-						<label for="floatingPassword">Last Name</label>
-					  </div>
-					  <div class="form-floating mb-3">
-						<input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+						<input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
 						<label for="floatingInput">Email address</label>
 					  </div>
 					  <div class="form-floating mb-3">
-						<input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password">
+						<input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password" required>
 						<label for="floatingPassword">Password</label>
 					  </div>
-					  <div class="form-floating mb-3">
-						<input type="password" name="cpassword" class="form-control" id="floatingInput" placeholder="name@example.com">
-						<label for="floatingInput">Confirm Password</label>
-					  </div>
-
 					  <!-- <div class="form-check mb-3">
 						<input class="form-check-input" type="checkbox" value="" id="rememberPasswordCheck">
 						<label class="form-check-label" for="rememberPasswordCheck">
@@ -54,7 +40,7 @@
 					  </div> -->
 	  
 					  <div class="d-grid">
-						<button class="btn btn-lg btn-primary btn-login text-uppercase fw-bold mb-2" type="submit">Register</button>
+						<button class="btn btn-lg btn-primary btn-login text-uppercase fw-bold mb-2" type="submit">Login</button>
 						<div class="text-center">
 						  <a class="small" href="#">Forgot password?</a>
 						  <a class="small" href="/">Back to Home</a>
@@ -69,6 +55,5 @@
 		  </div>
 		</div>
 	  </div>
-	  
 </body>
 </html>
